--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <title>Gamelar HomePage </title>
 </head>
 <style>
+body {  padding:0px;
+	margin:0px;
+}
 #kiri {
 	background-color:black;
 	height:100vh;
@@ -18,7 +21,7 @@
 }
 
 </style>
-<body >
+<body>
 <div id="kiri" style="text-align:center;">
 	<img src="assets/Logo.png" style="width:100px;height:100px">
 	<pre style="font-size:36px;font-family:Serif;color:Red"> <b>G</b>AMEL-<b>AR</b> </pre> 
