--- a/pages/konten.html
+++ b/pages/konten.html
@@ -14,7 +14,7 @@
         color:white;}
 </style>
 
-<body style="background-image: url(../assets/back.jpg); background-repeat: auto ; background-size:contain;">
+<body style="background-image: url(../assets/back.jpg); background-repeat: no-repeat ; background-size:contain;background-attachment: fixed">
     <div style="padding: 10% 5% 5% 5%">
         <a name="Top">
             <h1>Ceritanya ini konten</h1></a>
@@ -49,15 +49,14 @@
         <br>
 
         <a name="Bot"><h2>Last Section</h2></a>
-        <p> uda ga kepake >.
-            < </p>
+        <p> uda ga kepake >.< </p>
                 <p> ""On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."" </p>
                 <br>
                 <hr>
                 <br>
                 <br>
 
-                <a title="Click to top" href="#Top"> Back to top </a>
+                <a title="Click to top" href="#Top" style="color:white;"> Back to top </a>
     </div>
 </body>
 
