--- a/index.html
+++ b/index.html
@@ -17,13 +17,19 @@
 
             <table class="navigation">
                 <td>
-                    <a href="pages/konten.html#Sec1" target="iframe1"><p>Product</p></a>
+                    <a href="pages/konten.html#Sec1" target="iframe1">
+                        <p>Product</p>
+                    </a>
                 </td>
                 <td>
-                    <a href="pages/konten.html#Sec2" target="iframe1"><p>Download</p></a>
+                    <a href="pages/konten.html#Sec2" target="iframe1">
+                        <p>Download</p>
+                    </a>
                 </td>
                 <td>
-                    <a href="pages/konten.html#Sec3" target="iframe1"><p>About Us</p></a>
+                    <a href="pages/konten.html#Sec3" target="iframe1">
+                        <p>About Us</p>
+                    </a>
                 </td>
             </table>
         </div>
@@ -33,7 +39,7 @@
     </div>
 
     <div id="kanan">
-        <iframe src="pages/konten.html" name="iframe1" style="border:none;height:100%;width:100%"></iframe>
+        <iframe class="iframe" src="pages/konten.html" name="iframe1"></iframe>
     </div>
 
 </body>
