fixing content section

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <title>Gamel-AR</title>
     <!-- Link ke main CSS -->
     <link href="css/main.css" rel="stylesheet">
+    <link href="css/konten.css" rel="stylesheet">
 </head>
 
 <body>
     <div id="kiri" style="text-align:center;">
         <div style="padding:10% 5% 5% 5%; height: 100vh;">
             <img class="logo" src="assets/Logo.png">
-            <h1 class="judul"> <b>G</b>AMEL-<b>AR</b> </h1>
+            <h1 class="judul"> G<span style="font-size:30px; font-weight:300;">AMEL-</span>AR </h1>
             <p class="subjudul">You're one touch away from Gamelan</p>
             <!--            <hr color="white" width="300px">-->
 
