ver 2.5, edit banyak

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <title>Gamel-AR</title>
     <!-- Link ke main CSS -->
     <link href="css/main.css" rel="stylesheet">
-    <link href="css/konten.css" rel="stylesheet">
+    <link href='https://fonts.googleapis.com/css?family=Droid+Sans:700|Roboto:400,300' rel='stylesheet' type='text/css'>
+    
 </head>
 
 <body>
@@ -15,7 +16,8 @@
             <h1 class="judul"> G<span style="font-size:30px; font-weight:300;">AMEL-</span>AR </h1>
             <p class="subjudul">You're one touch away from Gamelan</p>
             <!--            <hr color="white" width="300px">-->
-
+            <br>
+            <img src="assets/gambarGamelan.png">
             <table class="navigation">
                 <td>
                     <a href="pages/konten.html#Sec1" target="iframe1">
