--- a/pages/konten.html
+++ b/pages/konten.html
@@ -2,51 +2,53 @@
 <html>
 
 <head>
-    <style>
-        h1 {
-            color: white;
-            text-align: left;
-            font-family:Roboto;
-        }
-        
-        h2 {
-            color: white;
-            font-family:Roboto;
-            font-weight: 400;
-        }
-        
-        p {
-            color: white;
-        }
-    </style>
+    <link href="../css/konten.css" rel="stylesheet">
 </head>
 
 <body style="background-image: url(../assets/back.jpg); background-repeat: no-repeat ; background-size:cover;background-attachment: fixed">
-    <div style="padding: 10% 3% 3% 3%">
-        <div style="height:100px; width:100vh;">
-            <a name="Top" style="">
-                <h1 style=" font-size:40px; font-weight:500">Gamel-AR</h1>
-            </a>
-        </div>
+    <div style="padding: 5% 3% 3% 3%">
+        <!--        <div style="height:50px; width:100vh;">-->
+        <!--            <a name="Top">. -->
+        <!--                <h1 style=" font-size:40px; font-weight:500">Kelompok A</h1>-->
+        <!--            </a>-->
+        <!--        </div>-->
 
         </section>
-        <a name="Sec1"><h2>Product</h2></a>
-        <p> Kalo jump kesini berarti uda bener :D </p>
-        <p> "Sed ut perspiciatis unde omnis iste natus error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore et dolore magnam aliquam quaerat voluptatem. Ut enim ad minima veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur? Quis autem vel eum iure reprehenderit qui in ea voluptate velit esse quam nihil molestiae consequatur, vel illum qui dolorem eum fugiat quo voluptas nulla pariatur?" </p>
+        <a name="Sec1"><h1>Product</h1></a>
+        <br>
+        <p>Datang untuk membuat perubahan, Gamel-AR menawarkan aplikasi inovatif menggunakan teknologi mutakhir tanpa melupakan warisan budaya tradisional Indonesia. Gamel-AR hadir sebagai perpaduan alat musik asli Indonesia, Gamelan, dengan teknologi Augmented Reality yang dapat membawa anda menabuh Gamelan dengan sensasi berbeda.
+            <br>Gamel-AR siap mengantarkan Gamelan sedekat sentuhan jari, hanya dengan smartphone Android kesayangan anda. </p>
+        <br>
+        <p>Budaya merupakan kata yang tidak bisa dipisahkan dari suatu negara, terutama untuk negara Indonesia yang dikenal memiliki keanekaragaman seni dan budaya dari Sabang sampai Merauke. Namun kenyataannya, perkembangan budaya di Indonesia semakin hari semakin berkurang akibat pengaruh globalisasi.</p>
+
+        <br>
+        <p>Terdapat beberapa faktor yang menyebabkan kebudayaan Indonesia cenderung dilupakan, salah satunya adalah konsumsi gadget yang berlebihan, khususnya smartphone. Dengan segala kemudahan dan keunggulan, smartphone menjadi perangkat yang paling sering diakses di watu luang. Memanfaatkan potensi tersebut, dibuatlah aplikasi augmented reality berbasis Android yang bernama Gamel-AR.</p>
+
+        <br>
+        <p>Gamel-AR adalah aplikasi yang beroperasi pada perangkat dengan sistem operasi Android. Aplikasi ini dibuat menggunakan metode markerless Augmented Reality, sehingga tidak diperlukan marker untuk menampilkan 3D gamelan. Selain itu, aplikasi ini juga memiliki fitur playable interactive sehingga user dapat memainkan gamelan yg ditampilkan.</p>
+        </p>
+        <br>
+        <br>
+        <br>
         <br>
         <hr>
         <br>
-        <br>
 
-        <a name="Sec2"><h2>Download</h2></a>
-        <p> Kalo jump kesini berarti uda bener :D </p>
+
+        <a name="Sec2"><h1>Download</h1></a>
         <p> "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?" </p>
+    <br><br>
+        <a href="http://play.google.com"> <img src="../assets/gplay.png" style="height:100px;"></a>
+        <a href="https://www.microsoft.com/en-us/store/apps/windows-phone?icid=en_US_Store_UH_apps_WinPho"> <img src="../assets/Wstore.png" style="height:100px;"></a>
+        <a href="http://www.apple.com"> <img src="../assets/appstore.png" style="height:100px;"></a>
+
+
         <br>
         <hr>
         <br>
         <br>
 
-        <a name="Sec3"><h2>About Us</h2></a>
+        <a name="Sec3"><h1>About Us</h1></a>
         <p> Kalo jump kesini berarti uda bener :D </p>
         <p> "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." </p>
         <br>
@@ -54,16 +56,9 @@
         <br>
         <br>
 
-        <a name="Bot"><h2>Last Section</h2></a>
-        <p> uda ga kepake >.
-            < </p>
-                <p> ""On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain. These cases are perfectly simple and easy to distinguish. In a free hour, when our power of choice is untrammelled and when nothing prevents our being able to do what we like best, every pleasure is to be welcomed and every pain avoided. But in certain circumstances and owing to the claims of duty or the obligations of business it will frequently occur that pleasures have to be repudiated and annoyances accepted. The wise man therefore always holds in these matters to this principle of selection: he rejects pleasures to secure other greater pleasures, or else he endures pains to avoid worse pains."" </p>
-                <br>
-                <hr>
-                <br>
-                <br>
 
-                <a title="Click to top" href="#Top" style="color:white;float:right;text-decoration:none;"> Back to top </a>
+
+        <a id="backtop" title="Click to top" href="#Top" style="color:white;float:right;text-decoration:none;"> Back to the top </a>
     </div>
 </body>
 
