Update About Us

--- a/pages/konten.html
+++ b/pages/konten.html
@@ -49,17 +49,36 @@
         <br>
 
         <a name="Sec3"><h1>About Us</h1></a>
-        <p> Kalo jump kesini berarti uda bener :D </p>
-        <p> "At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis praesentium voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident, similique sunt in culpa qui officia deserunt mollitia animi, id est laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi optio cumque nihil impedit quo minus id quod maxime placeat facere possimus, omnis voluptas assumenda est, omnis dolor repellendus. Temporibus autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe eveniet ut et voluptates repudiandae sint et molestiae non recusandae. Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis voluptatibus maiores alias consequatur aut perferendis doloribus asperiores repellat." </p>
-        <br>
-        <hr>
-        <br>
-        <br>
-
-
-
-        <a id="backtop" title="Click to top" href="#Top" style="color:white;float:right;text-decoration:none;"> Back to the top </a>
-    </div>
+        <div style="margin-bottom:30px"><p> Kelompok A merupakan kelompok yang terbentuk karena tugas Pemrograman Jaringan dan Web. Kelompok ini terdiri dari 8 mahasiswa angkatan 2013 dan 2014. Berikut ini adalah profil dari masing-masing mahasiswa.</p></div>
+<div style="float:left;width:40%">
+	<div>
+	<img src="../assets/Ubai.png" style="height:150px;">Luthfan Nur Ubai 
+	</div>
+	<div>
+	Luthfan Nur Ubai <img src="../assets/Bayu.png" style="height:150px;"> 
+	</div>
+	<div>
+	<img src="../assets/Icha.png" style="height:150px;"> Luthfan Nur Ubai
+	</div>
+	<div>
+	Luthfan Nur Ubai <img src="../assets/Inan.png" style="height:150px;"> 
+	</div>
+</div>
+<div style="float:right;width:40%">
+	<div>
+	<img src="../assets/Adit.png" style="height:150px;"> Luthfan Nur Ubai
+	</div>
+	<div>
+	<img src="../assets/Iqbal.png" style="height:150px;"> Luthfan Nur Ubai
+	</div>
+	<div>
+	<img src="../assets/Patrick2.png" style="height:150px;"> Luthfan Nur Ubai
+	</div>
+	<div>
+	<img src="../assets/Patrick1.png" style="height:150px;"> Luthfan Nur Ubai
+        </div>
+</div>
+	</div>
 </body>
 
 </html>
