why must AR? added

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <title>Gamel-AR</title>
+    
     <!-- Link ke main CSS -->
     <link href="css/main.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Droid+Sans:700|Roboto:400,300' rel='stylesheet' type='text/css'>
@@ -10,11 +11,13 @@
 </head>
 
 <body>
-    <div id="kiri" style="text-align:center;">
-        <div style="padding:10% 5% 5% 5%; height: 100vh;">
-            <img class="logo" src="assets/Logo.png">
-            <h1 class="judul"> G<span style="font-size:30px; font-weight:300;">AMEL-</span>AR </h1>
-            <p class="subjudul">You're one touch away from Gamelan</p>
+    <div id="kiri">
+        <div id="inner-kiri">
+            <a href="index.html" id="home-nav">
+                <img class="logo" src="assets/Logo.png">
+                <h1 class="judul"> G<span style="font-size:30px; font-weight:300;">AMEL-</span>AR </h1>
+                <p class="subjudul">You're one touch away from Gamelan</p>
+            </a>
             <!--            <hr color="white" width="300px">-->
             <br>
             <img src="assets/gambarGamelan.png">
