--- a/pages/konten.html
+++ b/pages/konten.html
@@ -5,7 +5,7 @@
     <link href="../css/konten.css" rel="stylesheet">
 </head>
 
-<body style="background-image: url(../assets/back.jpg); background-repeat: no-repeat ; background-size:cover;background-attachment: fixed">
+<body>
     <div style="padding: 5% 3% 3% 3%">
         <!--        <div style="height:50px; width:100vh;">-->
         <!--            <a name="Top">. -->
@@ -13,22 +13,54 @@
         <!--            </a>-->
         <!--        </div>-->
 
-        </section>
+
         <a name="Sec1"><h1>Product</h1></a>
         <br>
         <p>Datang untuk membuat perubahan, Gamel-AR menawarkan aplikasi inovatif menggunakan teknologi mutakhir tanpa melupakan warisan budaya tradisional Indonesia. Gamel-AR hadir sebagai perpaduan alat musik asli Indonesia, Gamelan, dengan teknologi Augmented Reality yang dapat membawa anda menabuh Gamelan dengan sensasi berbeda.
             <br>Gamel-AR siap mengantarkan Gamelan sedekat sentuhan jari, hanya dengan smartphone Android kesayangan anda. </p>
         <br>
         <p>Budaya merupakan kata yang tidak bisa dipisahkan dari suatu negara, terutama untuk negara Indonesia yang dikenal memiliki keanekaragaman seni dan budaya dari Sabang sampai Merauke. Namun kenyataannya, perkembangan budaya di Indonesia semakin hari semakin berkurang akibat pengaruh globalisasi.</p>
-
         <br>
         <p>Terdapat beberapa faktor yang menyebabkan kebudayaan Indonesia cenderung dilupakan, salah satunya adalah konsumsi gadget yang berlebihan, khususnya smartphone. Dengan segala kemudahan dan keunggulan, smartphone menjadi perangkat yang paling sering diakses di watu luang. Memanfaatkan potensi tersebut, dibuatlah aplikasi augmented reality berbasis Android yang bernama Gamel-AR.</p>
 
         <br>
         <p>Gamel-AR adalah aplikasi yang beroperasi pada perangkat dengan sistem operasi Android. Aplikasi ini dibuat menggunakan metode markerless Augmented Reality, sehingga tidak diperlukan marker untuk menampilkan 3D gamelan. Selain itu, aplikasi ini juga memiliki fitur playable interactive sehingga user dapat memainkan gamelan yg ditampilkan.</p>
-        </p>
         <br>
         <br>
+        <br>
+        <h2>Why must Gamel-AR?</h2>
+        <ul class="why">
+            <li>
+                <img src="../assets/iconEasy.png">
+                <h3>&emsp;Mudah digunakan</h3>
+                <p>&emsp;&nbsp;Dapat digunakan di mana saja, kapan saja, dan oleh semua pengguna android.</p>
+            </li>
+            <br>
+            <br>
+
+            <li style="margin-left:250px;">
+                <img src="../assets/iconWawasan.png">
+                <h3>&emsp;Menambah Wawasan</h3>
+                <p>&emsp;&nbsp;Media Edukatif untuk mengenalkan warisan budaya gamelan</p>
+            </li>
+            <br>
+            <br>
+
+            <li>
+                <img src="../assets/iconBook.png">
+                <h3>&emsp;Tidak membutuhkan alat tambahan</h3>
+                <p>&emsp;&nbsp;Markerless AR memungkinkan untuk menggunakan objek apapun sebagai Marker</p>
+
+            </li>
+            <br>
+            <br>
+
+            <li style="margin-left:250px;">
+                <img src="../assets/iconSound.png">
+                <h3>&emsp;Dapat dimainkan</h3>
+                <p>&emsp;&nbsp;Fitur untuk menghasilkan suara mirip dengan aslinya</p>
+            </li>
+        </ul>
         <br>
         <br>
         <hr>
@@ -36,46 +68,66 @@
 
 
         <a name="Sec2"><h1>Download</h1></a>
-        <p> "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?" </p>
-    <br><br>
-        <a href="coming.html"> <img src="../assets/logoPlay.png" style="height:150px;"></a>
-        <a href="coming.html"> <img src="../assets/logoWindows.png" style="height:150px;padding-left:10px;padding-right:10px;"></a>
-        <a href="coming.html"> <img src="../assets/logoApp.png" style="height:150px;"></a>
+        <br>
+        <!--        <p> "But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure?" </p>-->
+        <p> Aplikasi Gamel-AR dapat tersedia dalam berbagai platform yaitu Android OS, Apple iOS, dan Windows Phone. Semua tersedia dan dapat diakses secara gratis pada perangkat mobile anda. Anda dapat mengunduhnya melalui link download berikut ini:</p>
+        <br>
+        <br>
+        <div class="logo">
+            <a href="coming.html"> <img src="../assets/logoPlay.png" style="height:150px;"></a>
+            <a href="coming.html"> <img src="../assets/logoWindows.png" style="height:150px;padding-left:10px;padding-right:10px;"></a>
+            <a href="coming.html"> <img src="../assets/logoApp.png" style="height:150px;"></a>
+        </div>
         <br>
         <hr>
         <br>
         <br>
         <a name="Sec3"><h1>About Us</h1></a>
-        <div style="margin-bottom:30px"><p> Kelompok A merupakan kelompok yang terbentuk karena tugas Pemrograman Jaringan dan Web. Kelompok ini terdiri dari 8 mahasiswa angkatan 2013 dan 2014. Berikut ini adalah profil dari masing-masing mahasiswa.</p></div>
-<div style="float:left;width:40%">
-	<div>
-	<img src="../assets/Ubai.png" style="height:150px;">Luthfan Nur Ubai 
-	</div>
-	<div>
-	Luthfan Nur Ubai <img src="../assets/Bayu.png" style="height:150px;"> 
-	</div>
-	<div>
-	<img src="../assets/Icha.png" style="height:150px;"> Luthfan Nur Ubai
-	</div>
-	<div>
-	Luthfan Nur Ubai <img src="../assets/Inan.png" style="height:150px;"> 
-	</div>
-</div>
-<div style="float:right;width:40%">
-	<div>
-	<img src="../assets/Adit.png" style="height:150px;"> Luthfan Nur Ubai
-	</div>
-	<div>
-	<img src="../assets/Iqbal.png" style="height:150px;"> Luthfan Nur Ubai
-	</div>
-	<div>
-	<img src="../assets/Patrick2.png" style="height:150px;"> Luthfan Nur Ubai
-	</div>
-	<div>
-	<img src="../assets/Patrick1.png" style="height:150px;"> Luthfan Nur Ubai
+        <div style="margin-bottom:30px">
+            <p> Kelompok A merupakan kelompok yang terbentuk dalam rangka memenuhi tugas mata kuliah Pemrograman Jaringan dan Web. Kelompok ini terdiri dari 8 mahasiswa angkatan 2013 dan 2014 Departemen Teknik Elektro dan Teknologi Informasi Fakultas Teknik UGM. Berikut ini adalah profil dari masing-masing mahasiswa:</p>
         </div>
-</div>
-	</div>
+        <br>
+        <br>
+        <div>
+            <div style="float:left;width:40%">
+                <div>
+                    <img src="../assets/Ubai.png" style="height:150px;">Luthfan Nur Ubai
+                </div>
+                <div>
+                    Luthfan Nur Ubai <img src="../assets/Bayu.png" style="height:150px;">
+                </div>
+                <div>
+                    <img src="../assets/Icha.png" style="height:150px;"> Luthfan Nur Ubai
+                </div>
+                <div>
+                    Luthfan Nur Ubai <img src="../assets/Inan.png" style="height:150px;">
+                </div>
+            </div>
+            <div style="float:right;width:40%">
+                <div>
+                    <img src="../assets/Adit.png" style="height:150px;"> Luthfan Nur Ubai
+                </div>
+                <div>
+                    <img src="../assets/Iqbal.png" style="height:150px;"> Luthfan Nur Ubai
+                </div>
+                <div>
+                    <img src="../assets/Patrick2.png" style="height:150px;"> Luthfan Nur Ubai
+                </div>
+                <div>
+                    <img src="../assets/Patrick1.png" style="height:150px;"> Luthfan Nur Ubai
+                </div>
+            </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <br>
+
+
+
+        <a id="backtop" title="Click to top" href="#Top"> Back to the top </a>
+
+    </div>
 </body>
 
 </html>
