img profile hover fixed

--- a/pages/konten.html
+++ b/pages/konten.html
@@ -91,30 +91,30 @@
         <div>
             <div style="float:left;width:40%">
                 <div>
-                    <img src="../assets/Ubai.png" style="height:150px;">Luthfan Nur Ubai
+                    <img class="img-profile" src="../assets/Ubai.png" style="height:150px;">Luthfan Nur Ubai
                 </div>
                 <div>
-                    Luthfan Nur Ubai <img src="../assets/Bayu.png" style="height:150px;">
+                    Bayu Ilham Endianto <img class="img-profile" src="../assets/Bayu.png" style="height:150px;">
                 </div>
                 <div>
-                    <img src="../assets/Icha.png" style="height:150px;"> Luthfan Nur Ubai
+                    <img class="img-profile" src="../assets/Icha.png" style="height:150px;"> A'isya Nur Aulia Yusuf
                 </div>
                 <div>
-                    Luthfan Nur Ubai <img src="../assets/Inan.png" style="height:150px;">
+                    Aulia Inan Nur  <img class="img-profile" src="../assets/Inan.png" style="height:150px;">
                 </div>
             </div>
             <div style="float:right;width:40%">
                 <div>
-                    <img src="../assets/Adit.png" style="height:150px;"> Luthfan Nur Ubai
+                    <img class="img-profile" rc="../assets/Adit.png" style="height:150px;"> Aditya Kurnia Putra
                 </div>
                 <div>
-                    <img src="../assets/Iqbal.png" style="height:150px;"> Luthfan Nur Ubai
+                    <img class="img-profile" src="../assets/Iqbal.png" style="height:150px;"> Muhammmad Iqbal Ardiansyah
                 </div>
                 <div>
-                    <img src="../assets/Patrick2.png" style="height:150px;"> Luthfan Nur Ubai
+                    <img class="img-profile" src="../assets/Patrick2.png" style="height:150px;"> Rafi Fahlevi
                 </div>
                 <div>
-                    <img src="../assets/Patrick1.png" style="height:150px;"> Luthfan Nur Ubai
+                    <img class="img-profile" src="../assets/Patrick1.png" style="height:150px;"> Titus Alfredo
                 </div>
             </div>
         </div>
