--- a/pages/konten.html
+++ b/pages/konten.html
@@ -84,42 +84,45 @@
         <br>
         <a name="Sec3"><h1>About Us</h1></a>
 
-        <div style="margin-bottom:30px"><p> Kelompok A merupakan kelompok yang terbentuk karena tugas Pemrograman Jaringan dan Web. Kelompok ini terdiri dari 8 mahasiswa angkatan 2013 dan 2014. Berikut ini adalah profil dari masing-masing mahasiswa.</p></div>
-	<font size="6" color="white" font="Code"><p>Member</p></font>
+        <div style="margin-bottom:30px">
+            <p> Kelompok A merupakan kelompok yang terbentuk dalam rangka memenuhi tugas mata kuliah Pemrograman Jaringan dan Web. Kelompok ini terdiri dari 8 mahasiswa angkatan 2013 dan 2014 Departemen Teknik Elektro dan Teknologi Informasi Fakultas Teknik UGM. Berikut ini adalah profil dari masing-masing mahasiswa:</p>
+        </div>
+        <font size="5" color="white" font="Code"><p>Member</p></font>
+        <br>
+        <br>
+        <table align="center">
+            <tr>
+                <th style="width:150px;"><img class="img-profile" src="../assets/Icha.png" style="height:125px;"></th>
+                <th style="width:200px;" valign="center"><font color="white" size="4"><p>A'isya Nur Aulia</p></font></th>
 
-	<table>
-	<tr>
-		<th><img class="img-profile" src="../assets/Icha.png" style="height:125px;"></th>
-		<th valign="center" ><font color="white" size="4"><p>A'isya Nur Aulia</p></font></th>
+                <th style="width:150px;"><img class="img-profile" src="../assets/Inan.png" style="height:125px;"></th>
+                <th style="width:200px;"><font color="white" size="4"><p>Aulia Inan Nur</p></font></th>
 
-		<th><img class="img-profile" src="../assets/Inan.png" style="height:125px;"></th>
-		<th><font color="white" size="4"><p>Aulia Inan Nur</p></font></th>
-		
-	</tr>
-	<tr>
-		<th><img class="img-profile" src="../assets/Bayu.png" style="height:125px;"></th>
-		<th><font color="white" size="4"><p>Ilham Endianto</font></th> 
+            </tr>
+            <tr>
+                <th><img class="img-profile" src="../assets/Bayu.png" style="height:125px;"></th>
+                <th><font color="white" size="4"><p>Ilham Endianto</font></th>
 
-		<th><img class="img-profile" src="../assets/Ubai.png" style="height:125px;"></th>
-		<th valign="center"><font color="white" size="4"><p>Luthfan Nur Ubai</p></font></th> 		
-	</tr>
+                <th><img class="img-profile" src="../assets/Ubai.png" style="height:125px;"></th>
+                <th valign="center"><font color="white" size="4"><p>Luthfan Nur Ubai</p></font></th>
+            </tr>
 
-	<tr>
-		<th><img class="img-profile" src="../assets/Patrick1.png" style="height:125px;"></th>
-		<th valign="center"><font color="white" size="4"><p>Rafi Fahlevi</p></font></th>		 
+            <tr>
+                <th><img class="img-profile" src="../assets/Patrick1.png" style="height:125px;"></th>
+                <th valign="center"><font color="white" size="4"><p>Rafi Fahlevi</p></font></th>
 
-		<th><img class="img-profile" src="../assets/Patrick2.png" style="height:125px;"></th>
-		<th><font color="white" size="4"><p>Titus Alfredo</p></font></th>
-	</tr>
-	<tr>
-		<th><img class="img-profile" src="../assets/Adit.png" style="height:125px;"></th>
-		<th valign="center" ><font color="white" size="4"><p>Aditya Kurnia P</p></font></th> 
-		
-		<th><img class="img-profile" src="../assets/Iqbal.png" style="height:125px;"></th>
-		<th><font color="white" size="4"><p>Muhammad Iqbal</p></font></th>  		
-	</tr>
-	
-	</table>
+                <th><img class="img-profile" src="../assets/Patrick2.png" style="height:125px;"></th>
+                <th><font color="white" size="4"><p>Titus Alfredo</p></font></th>
+            </tr>
+            <tr>
+                <th><img class="img-profile" src="../assets/Adit.png" style="height:125px;"></th>
+                <th valign="center"><font color="white" size="4"><p>Aditya Kurnia P</p></font></th>
+
+                <th><img class="img-profile" src="../assets/Iqbal.png" style="height:125px;"></th>
+                <th><font color="white" size="4"><p>Muhammad Iqbal</p></font></th>
+            </tr>
+
+        </table>
         <br>
         <hr>
         <br>
