--- a/pages/konten.html
+++ b/pages/konten.html
@@ -111,7 +111,7 @@
                 <th><img class="img-profile" src="../assets/Patrick1.png" style="height:125px;"></th>
                 <th valign="center"><font color="white" size="4"><p>Rafi Fahlevi</p></font></th>
 
-                <th><img class="img-profile" src="../assets/Patrick2.png" style="height:125px;"></th>
+                <th><img class="img-profile" src="../assets/Edo.png" style="height:125px;"></th>
                 <th><font color="white" size="4"><p>Titus Alfredo</p></font></th>
             </tr>
             <tr>
