countdown timer fixed

--- a/pages/coming.html
+++ b/pages/coming.html
@@ -8,5 +8,8 @@
     </head>
     <body style="background-image: url(../assets/back.jpg); background-repeat: no-repeat ; background-size:cover;background-attachment: fixed">
         <img src="../assets/coming.png" style="height:150px;position:absolute;margin:auto;top:0;right:0;left:0;bottom:0;">
+        <p id="timeremaining" align="center" style="color:white;margin-top:450px;margin-bottom:0;font-size:2.5em;font-family: 'Droid Sans', sans-serif;">time</p>
+        <p align="center" style="font-family: 'Droid Sans', sans-serif;color:white;font-size:1em;margin-top:0;">&emsp;Days&emsp;&emsp;&emsp;Hours&emsp;&emsp;Minutes&emsp;&emsp;Seconds</p>
     </body>
+    <script src="../js/countdown.js"></script>
 </html>
