--- a/pages/konten.html
+++ b/pages/konten.html
@@ -30,7 +30,7 @@
         <br>
         <h2>Why must Gamel-AR?</h2>
         <ul class="why">
-            <li>
+            <li id="iconeasy">
                 <img src="../assets/iconEasy.png">
                 <h3>&emsp;Mudah digunakan</h3>
                 <p>&emsp;&nbsp;Dapat digunakan di mana saja, kapan saja, dan oleh semua pengguna android.</p>
@@ -38,7 +38,7 @@
             <br>
             <br>
 
-            <li style="margin-left:250px;">
+            <li id="iconwawasan" style="margin-left:250px;">
                 <img src="../assets/iconWawasan.png">
                 <h3>&emsp;Menambah Wawasan</h3>
                 <p>&emsp;&nbsp;Media Edukatif untuk mengenalkan warisan budaya gamelan</p>
@@ -46,7 +46,7 @@
             <br>
             <br>
 
-            <li>
+            <li id="iconbook">
                 <img src="../assets/iconBook.png">
                 <h3>&emsp;Tidak membutuhkan alat tambahan</h3>
                 <p>&emsp;&nbsp;Markerless AR memungkinkan untuk menggunakan objek apapun sebagai Marker</p>
@@ -55,7 +55,7 @@
             <br>
             <br>
 
-            <li style="margin-left:250px;">
+            <li id="iconsound" style="margin-left:250px;">
                 <img src="../assets/iconSound.png">
                 <h3>&emsp;Dapat dimainkan</h3>
                 <p>&emsp;&nbsp;Fitur untuk menghasilkan suara mirip dengan aslinya</p>
@@ -73,10 +73,10 @@
         <p> Aplikasi Gamel-AR dapat tersedia dalam berbagai platform yaitu Android OS, Apple iOS, dan Windows Phone. Semua tersedia dan dapat diakses secara gratis pada perangkat mobile anda. Anda dapat mengunduhnya melalui link download berikut ini:</p>
         <br>
         <br>
-        <div class="logo">
-            <a href="coming.html"> <img src="../assets/logoPlay.png" style="height:150px;"></a>
-            <a href="coming.html"> <img src="../assets/logoWindows.png" style="height:150px;padding-left:10px;padding-right:10px;"></a>
-            <a href="coming.html"> <img src="../assets/logoApp.png" style="height:150px;"></a>
+        <div class="logo" align="center">
+            <a id="logoplay" href="coming.html"> <img src="../assets/logoPlay.png" style="height:150px;"></a>
+            <a id="logowin" href="coming.html"> <img src="../assets/logoWindows.png" style="height:150px;padding-left:10px;padding-right:10px;"></a>
+            <a id="logoapp" href="coming.html"> <img src="../assets/logoApp.png" style="height:150px;"></a>
         </div>
         <br>
         <hr>
